--- a/aplicacionMovil/templates/aplicacionMovil/listar.html
+++ b/aplicacionMovil/templates/aplicacionMovil/listar.html
@@ -1,4 +1,4 @@
-{% extends 'principal.html' %}
+{% extends 'estructura/principal.html' %}
 
 {% block contenido %}
 <h5>Información</h5>
@@ -13,7 +13,7 @@
 
                     <!-- Botones -->
                     <div class="d-flex justify-content-between">
-                        <a href="" class="btn btn-danger btn-sm">Eliminar</a>
+                        <a href="{% url 'aplicacion_eliminar' dato.id%}" class="btn btn-danger btn-sm">Eliminar</a>
                         <a href="" class="btn btn-warning btn-sm">Editar campo</a>
                         <a href="" class="btn btn-primary btn-sm">Editar todo</a>
                     </div>
