--- a/aplicacionMovil/templates/comentarios/listar_comentarios.html
+++ b/aplicacionMovil/templates/comentarios/listar_comentarios.html
@@ -21,7 +21,7 @@
                     <div class="d-flex justify-content-between">
                         <a href="{% url 'comentario_eliminar' dato.id%}" class="btn btn-danger btn-sm">Eliminar</a>
                         <a href="{% url 'comentario_editar_patch' dato.id%}" class="btn btn-warning btn-sm">Editar campo</a>
-                        <a href="" class="btn btn-primary btn-sm">Editar todo</a>
+                        <a href="{% url 'comentario_editar_put' dato.id%}" class="btn btn-primary btn-sm">Editar todo</a>
                     </div>
                 </div>
             </div>
